# VisualNodeSystem

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Core.h  FEEditorNode.cpp  FEEditorNode.h  FEEditorNodeArea.cpp  FEEditorNodeArea.h  FEEditorNodeSocket.cpp  FEEditorNodeSocket.h  FEEditorNodeSystem.cpp  FEEditorNodeSystem.h  FEVisualNode.cpp  FEVisualNode.h  FEVisualNodeArea.cpp  FEVisualNodeArea.h  FEVisualNodeSocket.cpp  FEVisualNodeSocket.h  FEVisualNodeSystem.cpp  FEVisualNodeSystem.h  GroupComment.cpp  GroupComment.h  GroupCommentTests.cpp  GroupCommentTests.h  LICENSE.md  NodeAreaLoadTests.cpp  NodeAreaLoadTests.h  NodeFactoryTests.cpp  NodeFactoryTests.h  README.md  StandardNodeTests.cpp  StandardNodeTests.h  TestTools.cpp  TestTools.h  VisualNode.cpp  VisualNode.h  VisualNodeArea.cpp  VisualNodeArea.h  VisualNodeCore.cpp  (+9 more)
.github/workflows/: Build.yml  ContinuousIntegration.yml
Basic/: Basic.cpp  Basic.h
Basic/TinyScene/: CustomNode.cpp  CustomNode.h  CustomNode2.cpp  CustomNode2.h  CustomNode3.cpp  CustomNodeStyleDemonstration.cpp  CustomNodeStyleDemonstration.h
BasicTests/: Basic.cpp
BoundaryNodesTests/: LinkNodeTests.cpp  SubAreaNodeTests.cpp  SubAreaNodeTests.h
CustomNodes/: BeginNode.cpp  BeginNode.h  CustomNode.cpp  CustomNode.h  CustomNode2.cpp  CustomNode2.h  CustomNode3.cpp  CustomNode3.h  CustomNode4.cpp  CustomNode4.h  CustomNode5.cpp  CustomNode5.h  CustomNodeStyleDemonstration.cpp  DivergentCopyNode.cpp  DivergentCopyNode.h  EventCountingNode.cpp  EventCountingNode.h
ExecutionFlowNodesTests/: ExecutionFlowNodesTests.cpp  ExecutionFlowNodesTests.h
GroupCommentTests/: GroupCommentTests.cpp
NodeAreaTests/EventSystemTests/: ExecutionEntryPointTests.cpp  ExecutionEntryPointTests.h  NodeAreaEventSystemTests.cpp
NodeAreaTests/GeneralTests/: NodeAreaGeneralTests.cpp
NodeAreaTests/LoadTests/: NodeAreaLoadTests.cpp  NodeAreaLoadTests.h
NodeFactoryTests/: NodeFactoryTests.cpp
NodeSystemTests/: NodeSystemTests.cpp
NodeSystemTests/LoadTests/: NodeSystemLoadTests.cpp  NodeSystemLoadTests.h
Resources/: ConnectionOrderingTestData.json  MediumNodeArea.json  StandardNodesControlFlowTestData.json  StandardNodesLogicalOperatorsTestData.json
StandardNodes/BoundaryNodes/: SocketMirrorNode.cpp  SocketMirrorNode.h
StandardNodes/BoundaryNodes/LinkNode/: LinkNode.cpp  LinkNode.h
StandardNodes/BoundaryNodes/SubAreaNode/: SubAreaInputNode.cpp  SubAreaInputNode.h  SubAreaNode.cpp  SubAreaNode.h  SubAreaOutputNode.cpp  SubAreaOutputNode.h
StandardNodes/ExecutionFlowNodes/: BaseExecutionFlowNode.cpp  BaseExecutionFlowNode.h
StandardNodes/ExecutionFlowNodes/ControlFlowNodes/: BranchNode.cpp  BranchNode.h  LoopNode.cpp  LoopNode.h  SequenceNode.cpp  SequenceNode.h  WhileLoopNode.cpp  WhileLoopNode.h
StandardNodes/ExecutionFlowNodes/LiteralsNodes/: BoolLiteralNode.cpp  BoolLiteralNode.h  BoolVec2LiteralNode.cpp  BoolVec2LiteralNode.h  BoolVec3LiteralNode.cpp  BoolVec3LiteralNode.h  BoolVec4LiteralNode.cpp  BoolVec4LiteralNode.h  FloatLiteralNode.cpp  FloatLiteralNode.h  IntegerLiteralNode.cpp  IntegerLiteralNode.h  Vec2LiteralNode.cpp  Vec2LiteralNode.h  Vec3LiteralNode.cpp  Vec3LiteralNode.h  Vec4LiteralNode.cpp  Vec4LiteralNode.h
StandardNodes/ExecutionFlowNodes/OperatorNodes/Arithmetic/: ArithmeticAddNode.cpp  ArithmeticAddNode.h  ArithmeticDivideNode.cpp  ArithmeticDivideNode.h  ArithmeticModulusNode.cpp  ArithmeticModulusNode.h  ArithmeticMultiplyNode.cpp  ArithmeticMultiplyNode.h  ArithmeticPowerNode.cpp  ArithmeticPowerNode.h  ArithmeticSubtractNode.cpp  ArithmeticSubtractNode.h  BaseArithmeticOperatorNode.cpp  BaseArithmeticOperatorNode.h
StandardNodes/ExecutionFlowNodes/OperatorNodes/Comparison/: BaseComparisonOperatorNode.cpp  BaseComparisonOperatorNode.h  EqualNode.cpp  EqualNode.h  GreaterThanNode.cpp  GreaterThanNode.h  GreaterThanOrEqualNode.cpp  GreaterThanOrEqualNode.h  LessThanNode.cpp  LessThanNode.h  LessThanOrEqualNode.cpp  LessThanOrEqualNode.h  NotEqualNode.cpp  NotEqualNode.h
StandardNodes/ExecutionFlowNodes/OperatorNodes/Logical/: BaseLogicalOperatorNode.cpp  BaseLogicalOperatorNode.h  LogicalANDOperatorNode.cpp  LogicalANDOperatorNode.h  LogicalNOTOperatorNode.cpp  LogicalNOTOperatorNode.h  LogicalOROperatorNode.cpp  LogicalOROperatorNode.h  LogicalXOROperatorNode.cpp  LogicalXOROperatorNode.h
StandardNodes/ExecutionFlowNodes/VariablesNodes/: BoolVariableNode.cpp  BoolVariableNode.h  BoolVec2VariableNode.cpp  BoolVec2VariableNode.h  BoolVec3VariableNode.cpp  BoolVec3VariableNode.h  BoolVec4VariableNode.cpp  BoolVec4VariableNode.h  FloatVariableNode.cpp  FloatVariableNode.h  IntegerVariableNode.cpp  IntegerVariableNode.h  Vec2VariableNode.cpp  Vec2VariableNode.h  Vec3VariableNode.cpp  Vec3VariableNode.h  Vec4VariableNode.cpp  Vec4VariableNode.h
StandardNodes/LinkNode/: LinkNode.cpp  LinkNode.h  VisualLinkNode.cpp  VisualLinkNode.h
StandardNodes/ReferenceNodes/: VisualReferenceNode.cpp  VisualReferenceNode.h
StandardNodes/SubAreaNodes/: VisualSubAreaNode.cpp  VisualSubAreaNode.h
SubSystems/: TextInputPopup.cpp  TextInputPopup.h
SubSystems/VisualNodeArea/: VisualNodeArea.cpp  VisualNodeArea.h  VisualNodeArea.inl  VisualNodeAreaInput.cpp  VisualNodeAreaLogic.cpp  VisualNodeAreaRendering.cpp
VersionInfo/: FEVersionInfo.h  ProjectVersion.h.in  UpdateProjectVersion.cmake
